Added GameServer & GameClient

--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
     <head>
         <meta charset="utf-8">
         <title>Game</title>
+        <style>
+            html, body {
+                margin: 0;
+            }
+
+            canvas {
+                display: block;
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
+        </style>
     </head>
     <body>
+        <canvas id="canvas"></canvas>
         <script src="/primus/primus.js"></script>
         <script src="client.js"></script>
     </body>
